Import partition flags when importing partition table.

BUG: 400331